added bind parameters and refactored sql results
